Salesforce CPQ/main/default/objects/User/fields/OutputFormatChangeAllowed__c.field-meta.xml
<CustomField>
    <fullName>OutputFormatChangeAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
    <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
    <label>Allow Output Format Change</label>
    <type>Checkbox</type>
</CustomField>