Salesforce CPQ/main/default/objects/User/fields/ProductSortPreference__c.field-meta.xml
<CustomField>
    <fullName>ProductSortPreference__c</fullName>
    <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
    <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
    <label>Product Sort Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Followed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>